--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <!-- site metas -->
-  <title>mind</title>
+  <title>Xurshid School in Tashkent</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="author" content="">
@@ -95,7 +95,7 @@
                 <div class="row">
                   <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
                     <div class="text-bg">
-                      <h1>Search your Favorite Course here</h1>
+                      <h1>Search your Favorite Course here In Tashkent Xurshid School</h1>
                       <p>TOP NOTCH COURSES FROM TRAINED PROFESSIONALS</p>
                       <a href="#">Read more</a> <a href="#">get a qoute</a>
                     </div>
@@ -181,7 +181,7 @@
     <div class="row">
       <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
         <div class="about-box">
-          <h2>About <strong class="yellow">Our Game</strong></h2>
+          <h2>About <strong class="yellow">Our School Xurshid</strong></h2>
           <p> orem ipsum dolor sit amet, consectetur adipisicing elit. Quas voluptatem maiores eaque similique non distinctio voluptates perspiciatis omnis, repellendus ipsa aperiam, laudantium voluptatum nulla?.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, assumenda, vo
           luptatum. Libero eligendi molestias iure error animi totam laudantium, aspernatur similique id eos at consectetur illo culpa,  </p>
@@ -207,7 +207,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="titlepage">
-          <h2>Some <strong class="yellow">important facts</strong></h2>
+          <h2>Some <strong class="yellow">important facts my School Xurshid</strong></h2>
           <span>luptatum. Libero eligendi molestias iure error animi totam laudantium, aspernatur similique id eos a
           t consectetur illo culpa,</span>
         </div>
@@ -221,13 +221,13 @@
         <div class="col col-xs-12">
           <div class="important_box">
             <h3>200+</h3>
-            <span>Teachers</span>
+            <span>Teachers 1 Farrux</span>
           </div>
         </div>
         <div class="col col-xs-12">
           <div class="important_box">
             <h3>20+</h3>
-            <span>Colleges</span>
+            <span>Colleges 1 Farrux</span>
           </div>
         </div>
         <div class="col col-xs-12">
